--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     @charset "UTF-8";
     @import 'https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.9.0-alpha2/katex.min.css';
 
-
     html {
-      font-size: .875em;
+      font-size: 16px;
       background: #fff;
       color: #373D49
     }
@@ -23,20 +22,19 @@
 
     body {
       padding: 60px 40px 100px 40px;
-      font-size: 16px;
       font-weight: 400;
       line-height: 2rem;
     }
 
     ul,
     ol {
-      margin-bottom: .83999rem;
-      padding-top: .16001rem
+      margin-bottom: .83999em;
+      padding-top: .16001em
     }
 
     li {
       font-feature-settings: 'kern'1, 'onum'1, 'liga'1;
-      margin-left: 1rem
+      margin-left: 1em
     }
 
     li>ul,
@@ -45,7 +43,7 @@
     }
 
     p {
-      padding-top: .66001rem;
+      padding-top: .66001em;
       font-feature-settings: 'kern'1, 'onum'1, 'liga'1;
       margin-top: 0
     }
@@ -57,15 +55,15 @@
 
     p,
     pre {
-      margin-bottom: 1.33999rem
+      margin-bottom: 2em
     }
 
     pre {
-      font-size: 1rem;
-      padding: .66001rem 9.5px 9.5px;
-      line-height: 2rem;
-      background: linear-gradient(to bottom, #fff 0, #fff .75rem, #f5f7fa .75rem, #f5f7fa 2.75rem, #fff 2.75rem, #fff 4rem);
-      background-size: 100% 4rem;
+      font-size: 1em;
+      padding: .66001em 9.5px 9.5px;
+      line-height: 2em;
+      background: linear-gradient(to bottom, #fff 0, #fff .75em, #f5f7fa .75em, #f5f7fa 2.75em, #fff 2.75em, #fff 4em);
+      background-size: 100% 4em;
       border-color: #D3DAEA
     }
 
@@ -74,10 +72,10 @@
     }
 
     blockquote p {
-      font-size: 1rem;
-      margin-bottom: .33999rem;
+      font-size: 1em;
+      margin-bottom: .33999em;
       font-style: italic;
-      padding: .66001rem 1rem 1rem;
+      padding: .66001em 1em 1em;
       border-left: 3px solid #A0AABF
     }
 
@@ -100,45 +98,45 @@
     }
 
     h1 {
-      line-height: 3rem;
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
-      padding-top: .78001rem
+      line-height: 3em;
+      font-size: 2.5em;
+      margin-bottom: 1em;
+      padding-top: .78001em
     }
 
     h2 {
-      font-size: 1.953125rem;
-      margin-bottom: 1rem;
-      padding-top: .8164163rem
+      font-size: 1.953125em;
+      margin-bottom: 1em;
+      padding-top: .8164163em
     }
 
     h2,
     h3 {
-      line-height: 3rem
+      line-height: 3em
     }
 
     h3 {
-      font-size: 1.6457143rem;
-      margin-bottom: .07599rem;
-      padding-top: .92401rem
+      font-size: 1.6457143em;
+      margin-bottom: .07599em;
+      padding-top: .92401em
     }
 
     h4 {
-      font-size: 1.5625rem;
-      margin-bottom: .546865rem;
-      padding-top: .453135rem
+      font-size: 1.5625em;
+      margin-bottom: .546865em;
+      padding-top: .453135em
     }
 
     h5 {
-      font-size: 1.25rem;
-      margin-bottom: -.56251rem;
-      padding-top: .56251rem
+      font-size: 1.25em;
+      margin-bottom: -.56251em;
+      padding-top: .56251em
     }
 
     h6 {
-      font-size: 1rem;
-      margin-bottom: -.65001rem;
-      padding-top: .65001rem
+      font-size: 1em;
+      margin-bottom: -.65001em;
+      padding-top: .65001em
     }
 
     a {
@@ -179,12 +177,9 @@
     She taught me that it’s an act of creation.<br>
     She taught me that you should love the rough spots even harder.</p>
   <p class="has-line-data" data-line-start="16" data-line-end="20">If you’re seeing this page you might have found a
-    sticker.<br>
-    Tasha and I <a
+    sticker. Tasha and I <a
       href="https://travelswithcoco.com/post/620790396245704704/your-packages-have-arrived-in-the-fall-of-2019-i">purchased
-      an RV</a> and had plans to travel together in it.<br>
-    And now I travel without her.<br>
-    And now she travels within me, always, in my heart.</p>
+      an RV</a> and had plans to travel together in it. And now I travel without her. And now she travels within me, always, in my heart.</p>
   <p class="has-line-data" data-line-start="21" data-line-end="22">But it’s not enough for her to be in my heart. I’d
     like the world to know something of her too. So I made some stickers, and visited some places, and put stickers in
     the special spots I would’ve loved to share with her. Maybe you saw a sticker, and are reading this now because of
